[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/Objects/Base/BaseMelee.gd" type="Script" id=1]
[ext_resource path="res://assets/art/weapons/sword.png" type="Texture" id=2]
[ext_resource path="res://src/Ability/GrazeExpGiver.tscn" type="PackedScene" id=3]

[sub_resource type="CanvasItemMaterial" id=1]

[sub_resource type="RectangleShape2D" id=2]

[sub_resource type="Animation" id=3]
resource_name = "swing"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sword:flip_v")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.3, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sword:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="BaseMelee" type="RigidBody2D"]
material = SubResource( 1 )
collision_layer = 0
collision_mask = 3
gravity_scale = 0.0
continuous_cd = 2
contacts_reported = 1
contact_monitor = true
script = ExtResource( 1 )

[node name="GrazeExpGiver" parent="." instance=ExtResource( 3 )]

[node name="Sword" type="Sprite" parent="."]
visible = false
position = Vector2( 12, -12 )
scale = Vector2( 0.703125, 0.625 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
modulate = Color( 0.890196, 0.0666667, 0.0666667, 1 )
self_modulate = Color( 0.831373, 0.113725, 0.113725, 1 )
position = Vector2( 11, -14 )
scale = Vector2( 0.703125, 0.625 )
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/swing = SubResource( 3 )

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
